# coconut

./: .gitignore  CMakeLists.txt  LICENCE  Makefile  coconut.c  coconut.conf  coconut.h  install.sh  readme.md  utils.c  write_report.c
features/: get_minor_correction.c
include/: coconut.h  string_macros.h  utils.h
src/: coconut.c  display_additional.c  display_errors.c  display_usage.c  error_codes.c  flag_handling.c  load_config.c  read_errors.c  sort_errors.c  utils.c
src/display/: display_additional.c  display_errors.c  display_usage.c
src/errors/: error_codes.c  read_errors.c  sort_errors.c
src/utils/: file_utils.c  stream_utils.c  utils.c
